--- a/design_system/index.html
+++ b/design_system/index.html
@@ -742,7 +742,7 @@
         <div class="element">
           <div class="blockS Grey900 colorGreyLt shadowBox">
             <div>Grey 900</div>
-            <div>HEX:202020</div>
+            <div>HEX:292929</div>
           </div>
         </div>
       </div>
@@ -750,7 +750,7 @@
         <div class="element">
           <div class="blockS Grey800 colorGreyLt shadowBox">
             <div>Grey 800</div>
-            <div>HEX:5f6368</div>
+            <div>HEX:4f4f4f</div>
           </div>
         </div>
       </div>
@@ -758,7 +758,7 @@
         <div class="element">
           <div class="blockS Grey700 colorGreyLt shadowBox">
             <div>Grey 700</div>
-            <div>HEX:83878a</div>
+            <div>HEX:757575</div>
           </div>
         </div>
       </div>
@@ -766,7 +766,7 @@
         <div class="element">
           <div class="blockS Grey600 colorGreyLt shadowBox">
             <div>Grey 600</div>
-            <div>HEX:999D9F</div>
+            <div>HEX:a5a5a5</div>
           </div>
         </div>
       </div>
@@ -775,7 +775,7 @@
         <div class="element">
           <div class="blockS Grey500 colorGreyLt shadowBox">
             <div>Grey 500</div>
-            <div>HEX:c8c8c8</div>
+            <div>HEX:b6b5b5</div>
           </div>
         </div>
       </div>
@@ -783,7 +783,7 @@
         <div class="element">
           <div class="blockS Grey400 shadowBox">
             <div>Grey 400</div>
-            <div>HEX:e4e4e4</div>
+            <div>HEX:e6e6e6</div>
           </div>
         </div>
       </div>
@@ -804,7 +804,18 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200 shadowBox">
+            <div>Grey 200</div>
+            <div>HEX:f2f2f2</div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS Grey200 shadowBox">
+            <div>Grey 100</div>
+            <div>HEX:F8F8F8</div>
+          </div>
         </div>
       </div>
       <div class="Grid-cell">
@@ -814,12 +825,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element displayNone">
-          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f2f2f2</div>
         </div>
       </div>
       <div class="Grid-cell">
@@ -832,45 +838,59 @@
     <div class="element">
       <h3>Action</h3>
     </div>
+    <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS SkylineBlue colorGreyLt shadowBox">
+            <div>Grey 400</div>
+            <div>HEX:e6e6e6</div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorLt shadowBox">
+            <div>Grey 900</div>
+            <div>HEX:292929</div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorLter  shadowBox">
+            <div>Grey 800</div>
+            <div>HEX:4f4f4f</div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorLtest  shadowBox">
+            <div>Grey 700</div>
+            <div>HEX:757575</div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorWarm  shadowBox">
+            <div>Grey 600</div>
+            <div>HEX:a5a5a5</div>
+          </div>
+        </div>
+      </div>
 
-    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorLt shadowBox">HEX AAD9D9</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorLter shadowBox">HEX cbeded</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorLtest shadowBox">HEX faffff</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorWarm shadowBox">HEX fcf5eb</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorAlet shadowBox">HEX CC3300</div>
+          <div class="blockS colorAlet  shadowBox">
+            <div>Grey 500</div>
+            <div>HEX:b6b5b5</div>
+          </div>
         </div>
       </div>
 
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS Grey800 displayNone"></div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS Grey800 displayNone"></div>
-        </div>
-      </div>
     </div>
+
   </div>
   <!-- Color -->
   <div class="blankHM"></div>
@@ -899,7 +919,23 @@
         </div>
       </div>
     </div>
-
+    <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
+      <div class="Grid-cell">
+        <div class="element displayNone">
+          <div class="blockS Grey200 shadowFilter">Small Shadow</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS Grey200 shadowBoxLt">Normal Shadow - light</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element displayNone">
+          <div class="blockS Grey200 shadowFilterL">Larger Shadow</div>
+        </div>
+      </div>
+    </div>
     <div class="blankHS"></div>
 
 
