--- a/design_system/index.html
+++ b/design_system/index.html
@@ -32,9 +32,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -171,7 +169,7 @@
   <!-- header -->
 
   <!-- header image -->
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
     <div class="ProjectBanner displayLaptop">
@@ -740,7 +738,7 @@
     <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey900 colorGreyLt shadowBox">
+          <div class="blockS Grey900Bg Grey200 shadowBox">
             <div>Grey 900</div>
             <div>HEX:292929</div>
           </div>
@@ -748,7 +746,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey800 colorGreyLt shadowBox">
+          <div class="blockS Grey800Bg Grey200 shadowBox">
             <div>Grey 800</div>
             <div>HEX:4f4f4f</div>
           </div>
@@ -756,7 +754,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey700 colorGreyLt shadowBox">
+          <div class="blockS Grey700Bg Grey200 shadowBox">
             <div>Grey 700</div>
             <div>HEX:757575</div>
           </div>
@@ -764,7 +762,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey600 colorGreyLt shadowBox">
+          <div class="blockS Grey600Bg Grey200 shadowBox">
             <div>Grey 600</div>
             <div>HEX:a5a5a5</div>
           </div>
@@ -773,7 +771,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey500 colorGreyLt shadowBox">
+          <div class="blockS Grey500Bg Grey200 shadowBox">
             <div>Grey 500</div>
             <div>HEX:b6b5b5</div>
           </div>
@@ -781,7 +779,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey400 shadowBox">
+          <div class="blockS Grey400Bg shadowBox">
             <div>Grey 400</div>
             <div>HEX:e6e6e6</div>
           </div>
@@ -796,7 +794,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey300 shadowBox">
+          <div class="blockS Grey300Bg shadowBox">
             <div>Grey 300</div>
             <div>HEX:efefef</div>
           </div>
@@ -804,7 +802,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey200 shadowBox">
+          <div class="blockS Grey200Bg shadowBox">
             <div>Grey 200</div>
             <div>HEX:f2f2f2</div>
           </div>
@@ -812,7 +810,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey200 shadowBox">
+          <div class="blockS Grey100Bg shadowBox">
             <div>Grey 100</div>
             <div>HEX:F8F8F8</div>
           </div>
@@ -820,17 +818,17 @@
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f8f8f8</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f2f2f2</div>
+          <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f2f2f2</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f8f8f8</div>
         </div>
       </div>
     </div>
@@ -841,7 +839,7 @@
     <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS SkylineBlue colorGreyLt shadowBox">
+          <div class="blockS SkylineBlue Grey200 shadowBox">
             <div>Grey 400</div>
             <div>HEX:e6e6e6</div>
           </div>
@@ -905,34 +903,34 @@
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey200 shadowFilter">Small Shadow</div>
+          <div class="blockS Grey200Bg shadowFilter">Small Shadow</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey200 shadowBox">Normal Shadow</div>
+          <div class="blockS Grey200Bg shadowBox">Normal Shadow</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey200 shadowFilterL">Larger Shadow</div>
+          <div class="blockS Grey200Bg shadowFilterL">Larger Shadow</div>
         </div>
       </div>
     </div>
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS Grey200 shadowFilter">Small Shadow</div>
+          <div class="blockS Grey200Bg shadowFilter">Small Shadow</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey200 shadowBoxLt">Normal Shadow - light</div>
+          <div class="blockS Grey200Bg shadowBoxLt">Normal Shadow - light</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS Grey200 shadowFilterL">Larger Shadow</div>
+          <div class="blockS Grey200Bg shadowFilterL">Larger Shadow</div>
         </div>
       </div>
     </div>
@@ -1147,7 +1145,7 @@
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
         <div class="element">
-          <div class="element colorBgGrey leftVerLine ">
+          <div class="element Grey200Bg leftVerLine ">
             <h4>
               <p> <strong>Title </strong></p>
               <ul>
@@ -1347,7 +1345,7 @@
   <!--back to top-->
 
   <!--footer-->
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
