--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -55,9 +55,7 @@
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
   <script type="text/javascript"
@@ -128,7 +126,7 @@
 
 
   <!--about gardenershub-->
-  <div class="colorBgGrey" id="bg-color-trigger">
+  <div class="Grey200Bg" id="bg-color-trigger">
     <div class="blankProject"></div>
     <div class="rowChng centerHorz centerVer alignCPH">
       <img src="../../image/layout_GardenersHub.png" alt="Gardeners Hub" class="widthXL">
@@ -2953,7 +2951,7 @@
 <!--back to top-->
 
 <!--footer-->
-<div class="colorBgGrey">
+<div class="Grey200Bg">
 
   <div class="footer">
     <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
