--- a/index.html
+++ b/index.html
@@ -77,9 +77,27 @@
   <!--handwriting font-family: 'Gloria Hallelujah'; -->
 
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <!--font awesome -->
 
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
+  <!--Ubuntu -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <!--Inter -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!--Raleway -->
+  <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+  <!--Golos Text -->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- Nunito Sans -->
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- Rubik -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- Quicksand -->
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
+  <!-- Mulish -->
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
@@ -167,7 +185,7 @@
         </div>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cell colorGreyTesting">
+        <div class="Grid-cell">
           <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My
             strength lies in understanding complex problems and requirements and transforming them into simple and
             effective solutions. </h3>
@@ -220,7 +238,9 @@
                 <div class="element">
                   <div class="element">
                     <h5>For job interview scheduling</h5>
-                    <h3 class="arrCard colorBlack">APPOINTA</h3>
+
+
+                    <h3 class="arrCard"><strong>APPOINTA</strong></h3>
                     <h4>Streamline the job interview scheduling process to make it more efficient,
                       convenient, and intuitive</h4>
                   </div>
@@ -238,7 +258,7 @@
               <div class="element">
                 <div class="element">
                   <h5>For tracking business performance</h5>
-                  <h3 class="arrCard colorBlack">SEER</h3>
+                  <h3 class="arrCard"><strong>SEER</strong></h3>
                   <!--Analysis Report-->
                   <h4>Help the brand managers understand their potential users and promote their
                     brand on Reddit</h4>
@@ -255,6 +275,7 @@
 
       <div class="Grid-cell">
         <div class="element">
+          <a>
           <div class="elementCard float cardBorder shadowBoxLt">
             <div class="img__wrap">
               <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
@@ -272,12 +293,12 @@
             <div class="element">
               <div class="element">
                 <h5>Password is required </h5>
-                <h3 class="arrCard colorBlack">Work Samples</h3>
-                <h4>broad skill set developed in a startup environment
-                  with deep engagement in all stages of the design process</h4>
+                <h3 class="arrCard"><strong>WORK SAMPLES</strong></h3>
+                <h4>broad skill set developed in a startup environment with deep engagement in all stages of the design
+                  process</h4>
               </div>
             </div>
-          </div>
+          </div></a>
         </div>
       </div>
       <div class="Grid-cell">
@@ -290,7 +311,7 @@
                 <div class="element">
                   <div class="element">
                     <h5>For website vickywang.me </h5>
-                    <h3 class="arrCard colorBlack">Design System</h3>
+                    <h3 class="arrCard"><strong>DESIGN SYSTEM</strong></h3>
                     <h4>Creating a design system to establish consistent branding and styling across the entire website
                     </h4>
                   </div>
@@ -309,7 +330,7 @@
   <!-- Arrow -->
   <div class="wrapper">
     <div class="element">
-      <p class="tArrow">Other project<img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
+      <p class="tArrow">Other project <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
   <!-- Arrow -->
@@ -325,10 +346,11 @@
               <div class="element">
                 <div class="element">
                   <h5>For Gardeners</h5>
-                  <h3>Gardeners Hub</h3>
-                  <h5>Find solutions and ideas to help gardeners to
+                  <h3 class="arrCard"><strong>GARDENERS HUB</strong></h3>
+
+                  <h4>Find solutions and ideas to help gardeners to
                     improve their horticultural experience with neighbors and reduce wasting resources
-                    by selling or sharing locally.</h5>
+                    by selling or sharing locally.</h4>
                 </div>
               </div>
             </div>
@@ -343,9 +365,10 @@
               <div class="element">
                 <div class="element">
                   <h5>For makeing appointment</h5>
-                  <h3>Appointment Maker</h3>
-                  <h5>Appointment maker is a personal reminder that combines different tasks into one
-                    App. easy to manage appointment scheduling.</h5>
+                   <h3 class="arrCard"><strong>APPOINTMENT MAKER</strong></h3>
+
+                  <h4>Appointment maker is a personal reminder that combines different tasks into one
+                    App. easy to manage appointment scheduling.</h4>
                 </div>
               </div>
             </div>
@@ -360,9 +383,9 @@
               <div class="element">
                 <div class="element">
                   <h5 class="">For plan meal</h5>
-                  <h3>Meal Planner</h3>
-                  <h5>A single mobile app that helps people to improve their cooking experience by
-                    generating a shopping list based on information from their kitchen</h5>
+                  <h3 class="arrCard"><strong>MEAL PLANNER</strong></h3>
+                  <h4>A single mobile app that helps people to improve their cooking experience by
+                    generating a shopping list based on information from their kitchen</h4>
                 </div>
               </div>
             </div>
@@ -391,7 +414,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="colorBgGrey">
+  <div class="Grey100Bg">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
