--- a/about/index.html
+++ b/about/index.html
@@ -72,9 +72,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -212,7 +210,7 @@
         </div>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cel colorGreyTesting">
+        <div class="Grid-cel Grey700">
           <h3>As a UI/UX designer with a background in <a href="/architecture/" class="textUnderline ">architecture</a>,
             I bring a unique perspective and a broad skill set
             to my work. I have developed my skills in a startup environment, where I have been deeply engaged in all
@@ -582,7 +580,7 @@
   </button>
   <!--back to top-->
 
-  <footer class="colorBgGrey">
+  <footer class="Grey200Bg">
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
       </p>
