--- a/appointment_maker/index.html
+++ b/appointment_maker/index.html
@@ -61,9 +61,7 @@
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -154,7 +152,7 @@
 
   <!--about appointmentmaker-->
 
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
     <div class="blankHL"></div>
     <div class="column centerVer">
 
@@ -1904,7 +1902,7 @@
   <!--step progress bar-->
 
 
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
   </div>
 
   <div class="blankHS"></div>
@@ -1931,7 +1929,7 @@
 <!--back to top-->
 
 <!--footer-->
-<div class="colorBgGrey">
+<div class="Grey200Bg">
 
   <div class="footer">
     <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
