--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -24,9 +24,7 @@
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -656,7 +654,7 @@
 <!--back to top-->
 
 <!--footer-->
-<div class="colorBgGrey">
+<div class="Grey200Bg">
   <div class="footer">
     <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
     </p>
