--- a/architecture/index.html
+++ b/architecture/index.html
@@ -43,9 +43,7 @@
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -161,14 +159,14 @@
             <h1> Architecture &nbsp;</h1>
 
             <span class="divider1"></span>
-            <h1> Selected academic projects </h1>
+            <h1> Academic projects </h1>
           </div>
         </strong>
 
       </div>
 
       <div class="Grid Grid--full">
-        <div class="Grid-cell colorGreyTesting">
+        <div class="Grid-cell Grey700">
           <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are exemplified in the following projects. These projects placed great emphasis on the significant determinants of building form, encompassing format, spatial arrangement, materiality, tectonics, social considerations, technology, and environmental factors.</h3>
         </div>
       </div>
@@ -427,7 +425,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
