--- a/meal_planner/index.html
+++ b/meal_planner/index.html
@@ -60,9 +60,7 @@
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -192,7 +190,7 @@
 
   </div>
   <!--about mealplanner-->
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
 
     <div class="blankHM"></div>
     <hr>
@@ -684,7 +682,7 @@
   </div>
 
   <!-- STRATEGY -->
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
     <div class="blankHL"></div>
 
 
@@ -1105,7 +1103,7 @@
     <br>
   </div>
   <!-- 02 -->
-  <div class=" colorBgGrey">
+  <div class=" Grey200Bg">
     <div class="blankHS"></div>
 
     <div class="column wrapper ">
@@ -1840,7 +1838,7 @@
   </div>
   <div class="blankHM"></div>
 
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
     <div class="blankHS"></div>
 
     <div class="carousel">
