--- a/photography/index.html
+++ b/photography/index.html
@@ -48,9 +48,7 @@
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="scripts_ScrollTrigger.js"></script>
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -169,14 +167,14 @@
       <div class="intro" data-aos="fade-up">
         <strong>
           <div class="intro">
-            <h1> Photography &nbsp;</h1>
+            <h1> Photographs &nbsp;</h1>
             <span class="divider1"></span>
-            <h1> Selected photographs </h1>
+            <h1> Nature &#38; Wildlife </h1>
           </div>
         </strong>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cell colorGreyTesting">
+        <div class="Grid-cell Grey700">
      
 
           <h3>Through my unique perspective and lens, I find joy in capturing the intricate narratives and inherent
@@ -671,7 +669,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="colorBgGrey">
+  <div class="Grey200Bg">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
