--- a/seer/index.html
+++ b/seer/index.html
@@ -62,9 +62,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -1790,7 +1788,7 @@
 
   <!--back to top-->
 
-  <footer class="colorBgGrey">
+  <footer class="Grey200Bg">
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
       </p>
