--- a/appointa/index.html
+++ b/appointa/index.html
@@ -2334,7 +2334,7 @@
   <!--back to top-->
 
   <!--footer-->
-  <div class="Grey200Bg">
+  <footer class="Grey100Bg">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
@@ -2357,7 +2357,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </footer>
   <!--footer-->
 
 
