--- a/architecture/index.html
+++ b/architecture/index.html
@@ -425,7 +425,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="Grey200Bg">
+  <footer class="Grey100Bg">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
@@ -448,7 +448,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </footer>
   <!--footer-->
 </body>
 
