--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <img src="./image/Cover_APPOINTA.png" alt="APPOINTA">
                 <div class="element">
                   <div class="element">
-                    <h5>For job interview scheduling</h5>
+                    <h5 class="Grey700">For job interview scheduling</h5>
 
 
                     <h3 class="arrCard"><strong>APPOINTA</strong></h3>
@@ -257,7 +257,7 @@
               <img src="./image/Cover_SEER.png" alt="SEER">
               <div class="element">
                 <div class="element">
-                  <h5>For tracking business performance</h5>
+                  <h5 class="Grey700">For tracking business performance</h5>
                   <h3 class="arrCard"><strong>SEER</strong></h3>
                   <!--Analysis Report-->
                   <h4>Help the brand managers understand their potential users and promote their
@@ -292,10 +292,9 @@
             </div>
             <div class="element">
               <div class="element">
-                <h5>Password is required </h5>
+                <h5 class="Grey700">Password is required </h5>
                 <h3 class="arrCard"><strong>WORK SAMPLES</strong></h3>
-                <h4>broad skill set developed in a startup environment with deep engagement in all stages of the design
-                  process</h4>
+                <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
               </div>
             </div>
           </div></a>
@@ -310,7 +309,7 @@
                 <img src="./image/Cover_portfolioWeb.svg" alt="vickywang.me">
                 <div class="element">
                   <div class="element">
-                    <h5>For website vickywang.me </h5>
+                    <h5 class="Grey700">For website vickywang.me </h5>
                     <h3 class="arrCard"><strong>DESIGN SYSTEM</strong></h3>
                     <h4>Creating a design system to establish consistent branding and styling across the entire website
                     </h4>
@@ -341,11 +340,11 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/gardeners_hub/">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./image/layout_GardenersHub.png" alt="Gardeners Hub">
               <div class="element">
                 <div class="element">
-                  <h5>For Gardeners</h5>
+                  <h5 class="Grey700">For Gardeners</h5>
                   <h3 class="arrCard"><strong>GARDENERS HUB</strong></h3>
 
                   <h4>Find solutions and ideas to help gardeners to
@@ -360,11 +359,11 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/appointment_maker/">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./image/layout_AppointmentMaker.png" alt="Make appointment">
               <div class="element">
                 <div class="element">
-                  <h5>For makeing appointment</h5>
+                  <h5 class="Grey700">For makeing appointment</h5>
                    <h3 class="arrCard"><strong>APPOINTMENT MAKER</strong></h3>
 
                   <h4>Appointment maker is a personal reminder that combines different tasks into one
@@ -378,11 +377,11 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/meal_planner/">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./image/layout_MealPlanner.png" alt="Meal Planner">
               <div class="element">
                 <div class="element">
-                  <h5 class="">For plan meal</h5>
+                  <h5 class="Grey700">For plan meal</h5>
                   <h3 class="arrCard"><strong>MEAL PLANNER</strong></h3>
                   <h4>A single mobile app that helps people to improve their cooking experience by
                     generating a shopping list based on information from their kitchen</h4>
@@ -414,7 +413,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="Grey100Bg">
+  <footer class="Grey100Bg">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
@@ -437,7 +436,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </footer>
   <!--footer-->
 
 
