--- a/photography/index.html
+++ b/photography/index.html
@@ -669,7 +669,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <div class="Grey200Bg">
+  <footer class="Grey100Bg">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
@@ -692,7 +692,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </footer>
   <!--footer-->
 
 </body>
