--- a/about/index.html
+++ b/about/index.html
@@ -434,27 +434,27 @@
 
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
-        <div class="element ">
+        <div class="element">
           <h3 class=>EDUCATION </h3>
           <div class="lineHorizS"></div>
         </div>
 
-        <div class="element ">
+        <div class="element">
           <h4> <strong>UC Berkeley </strong> </h4>
           <h6 class="textItalic"> August 2015 - May 2019</h6>
-          <h5>Master of Architecture </h5>
-          <h5> Building Science / Technology </h5>
+          <h4>Master of Architecture </h4>
+          <h5> Building Science &#47; Technology </h5>
         </div>
-        <div class="element ">
+        <div class="element">
           <h4> <strong>Beijing University of Technology </strong> </h4>
           <h6 class="textItalic"> September 2009 - July 2013</h6>
-          <h5>Bachelor of Art </h5>
+          <h4>Bachelor of Art </h4>
           <h5> Art & Design / Landscape Design </h5>
         </div>
-        <div class="element ">
+        <div class="element">
           <h4> <strong>Google UX Design Professional Certificate </strong> </h4>
           <h6 class="textItalic"> August 2021 - October 2021</h6>
-          <h5>Google &#124; Coursera</h5>
+          <h4>Google &#124; Coursera</h4>
           <h5> UI &#47; UX Design </h5>
         </div>
       </div>
@@ -469,8 +469,9 @@
         <div class="element ">
           <h4> <strong> BookYourPet </strong> </h4>
           <h6 class="textItalic"> Oct. 2021 - Present</h6>
+          <h5>UI&#47;UX designer</h5>
+
           <h5>Calabasas, CA </h5>
-          <h5>UI/UX designer</h5>
         </div>
         <div class="element ">
           <h4> <strong>vickywang.me</strong> </h4>
@@ -526,7 +527,9 @@
         </div>
         <div class="element">
           <h4> <strong>2D Graphic</strong> </h4>
-          <h5> Adobe Suite (Illustrator, Photoshop, InDesign) AutoCAD </h5>
+          <h5> Adobe Suite (Illustrator, Photoshop, InDesign) </h5>
+          <h5> AutoCAD </h5>
+
         </div>
         <div class="element">
           <h4> <strong>Programming</strong> </h4>
