--- a/architecture/index.html
+++ b/architecture/index.html
@@ -178,20 +178,11 @@
   <div class="blankHXS"></div>
 
 
-  <!-- Selected Projects -->
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Selected Projects</p>
-            <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
-      </div>
+  <div class="wrapper ">
+    <div class="element">
+      <p class="tArrow">Selected Projects <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
-  <!-- Selected Projects -->
   <div class="blankHXS"></div>
   <!-- RECREATION COMMONS-->
   <div class="wrapper">
@@ -203,7 +194,8 @@
               <img src="./ar_01.svg" alt="Appointa">
               <div class="elementInner">
                 <h5>Activity Center</h5>
-                <h3>RECREATION COMMONS</h3>
+                <h3 class="arrCard"><strong>RECREATION COMMONS</strong></h3>
+
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; INTEGRATED DESIGN STUDIO, ARCH 203
                 </h6>
@@ -224,7 +216,8 @@
             <img src="./ar_06.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Form finding exercise </h5>
-              <h3>KAPPE HOUSE STUDY</h3>
+              <h3 class="arrCard"><strong>KAPPE HOUSE STUDY</strong></h3>
+
               <p class="lineHorizAll"></p>
               <h6 class=""> <strong>Studio:</strong> &nbsp; THE MAKING OF BUILDINGS
               </h6>
@@ -258,7 +251,8 @@
               <img src="./ar_02.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Library and infrastructure</h5>
-                <h3>NARROW STRIPES</h3>
+                <h3 class="arrCard"><strong>NARROW STRIPES</strong></h3>
+
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; COMPETITION
                 </h6>
@@ -281,7 +275,8 @@
               <img src="./ar_03.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Pavilion</h5>
-                <h3>RECOVERY OF RIVER EDGES </h3>
+                <h3 class="arrCard"><strong>RECOVERY OF RIVER EDGES</strong></h3>
+
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; Introduction to Architecture Studio 2
                 </h6>
@@ -312,7 +307,8 @@
               <img src="./ar_07.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>On order: Differenciated</h5>
-                <h3>CONTINUITY OF OBJECTS </h3>
+                <h3 class="arrCard"><strong>CONTINUITY OF OBJECTS</strong></h3>
+
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; THESIS STUDIO, ARCH 204 A & B
                 </h6>
@@ -333,7 +329,8 @@
               <img src="./ar_05.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Form finding exercise </h5>
-                <h3>THE ROTATION OF CURVES</h3>
+                <h3 class="arrCard"><strong>THE ROTATION OF CURVES</strong></h3>
+
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; Introduction to Architecture Studio 1
                 </h6>
@@ -363,7 +360,8 @@
               <img src="./ar_04.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Urban public space</h5>
-                <h3>MANIFOLD GROUND</h3>
+                <h3 class="arrCard"><strong>MANIFOLD GROUND</strong></h3>
+
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; [IN]ARCH ADV</h6>
                 <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;SUMMERS 2014 6
@@ -383,7 +381,8 @@
               <img src="./ar_08.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Musume extension</h5>
-                <h3>LACAMA </h3>
+                <h3 class="arrCard"><strong>LACAMA</strong></h3>
+
                 <p class="lineHorizAll"></p>
                 <h6 class=""> <strong>Studio:</strong> &nbsp; ARCH 201 </h6>
                 <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2016 | One
