--- a/index.html
+++ b/index.html
@@ -77,26 +77,41 @@
   <!--handwriting font-family: 'Gloria Hallelujah'; -->
 
 
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <!--font awesome -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
 
   <!--Ubuntu -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <!--Inter -->
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <!--Raleway -->
-  <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 
   <!--Golos Text -->
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <!-- Nunito Sans -->
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <!-- Rubik -->
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <!-- Quicksand -->
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
+    rel="stylesheet">
   <!-- Mulish -->
 
 
@@ -276,28 +291,29 @@
       <div class="Grid-cell">
         <div class="element">
           <a>
-          <div class="elementCard float cardBorder shadowBoxLt">
-            <div class="img__wrap">
-              <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
-              <div class="img__description">
-                <div class="input-field">
-                  <input type="password" id="password" placeholder="Password">
-                  <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
-                  </button>
-                  <div class="pwIncorrectHeight">
-                    <span id="pwIncorrect">Password is incorrect </span>
+            <div class="elementCard float cardBorder shadowBoxLt">
+              <div class="img__wrap">
+                <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
+                <div class="img__description">
+                  <div class="input-field">
+                    <input type="password" id="password" placeholder="Password">
+                    <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
+                    </button>
+                    <div class="pwIncorrectHeight">
+                      <span id="pwIncorrect">Password is incorrect </span>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="element">
               <div class="element">
-                <h5 class="Grey700">Password is required </h5>
-                <h3 class="arrCard"><strong>WORK SAMPLES</strong></h3>
-                <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                <div class="element">
+                  <h5 class="Grey700">Password is required </h5>
+                  <h3 class="arrCard"><strong>WORK SAMPLES</strong></h3>
+                  <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                </div>
               </div>
             </div>
-          </div></a>
+          </a>
         </div>
       </div>
       <div class="Grid-cell">
@@ -364,7 +380,7 @@
               <div class="element">
                 <div class="element">
                   <h5 class="Grey700">For makeing appointment</h5>
-                   <h3 class="arrCard"><strong>APPOINTMENT MAKER</strong></h3>
+                  <h3 class="arrCard"><strong>APPOINTMENT MAKER</strong></h3>
 
                   <h4>Appointment maker is a personal reminder that combines different tasks into one
                     App. easy to manage appointment scheduling.</h4>
@@ -398,42 +414,55 @@
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h4 data-aos="fade-up">Thank You for Visiting&#33; Check back soon for more updates and stay tuned&#33;</h4>
+      <div data-aos="fade-up">
+        <h4 class="element">
+          Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
+        </h4>
+      </div>
       <div class="blankHXS"></div>
 
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
   <div class="blankHL"></div>
-
   <!--back to top-->
-  <button id="myBtn" class=" myBtn-1550" title="Go to top">
-    <img id="bottom-arrow" class="ArrowHover" src="./icon/arrow-top.svg" alt="back to top">
-    <div>TOP</div>
+  <button id="myBtn" title="Back to top">
+    <div id="dad" class="u-textCenter">
+      <div id="bro">
+        <img id="bottom-arrow" class="" src="./icon/arrow-top.svg" alt="back to top">
+      </div>
+      <div id="sis">
+        <h4>TOP</h4>
+      </div>
+    </div>
   </button>
+
   <!--back to top-->
   <!--footer-->
   <footer class="Grey100Bg">
 
-    <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
-      <div class="footer-right">
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="./icon/mail.svg" alt="email">
-        </a>
+    <div class="element">
+      <div class="footer">
 
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="./icon/in.svg" alt="linkedin">
-        </a>
+        <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="./icon/git.svg" alt="github">
-        </a>
+        <div class="footer-right">
+          <a href="mailto:vickyw.design@gmail.com">
+            <img class="footer-logo" src="./icon/mail.svg" alt="email">
+          </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="./icon/ins.svg" alt="medium">
-        </a>
+          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+            <img class="footer-logo" src="./icon/in.svg" alt="linkedin">
+          </a>
+
+          <a target="_blank" href="https://github.com/vicky-wyq">
+            <img class="footer-logo" src="./icon/git.svg" alt="github">
+          </a>
+
+          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+            <img class="footer-logo" src="./icon/ins.svg" alt="medium">
+          </a>
+        </div>
       </div>
     </div>
   </footer>
