--- a/index.html
+++ b/index.html
@@ -419,15 +419,13 @@
           Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
         </h4>
       </div>
-      <div class="blankHXS"></div>
-
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
   <div class="blankHL"></div>
   <!--back to top-->
   <button id="myBtn" title="Back to top">
-    <div id="dad" class="u-textCenter">
+    <div id="dad">
       <div id="bro">
         <img id="bottom-arrow" class="" src="./icon/arrow-top.svg" alt="back to top">
       </div>
@@ -443,22 +441,18 @@
 
     <div class="element">
       <div class="footer">
-
         <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
 
         <div class="footer-right">
           <a href="mailto:vickyw.design@gmail.com">
             <img class="footer-logo" src="./icon/mail.svg" alt="email">
           </a>
-
           <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
             <img class="footer-logo" src="./icon/in.svg" alt="linkedin">
           </a>
-
           <a target="_blank" href="https://github.com/vicky-wyq">
             <img class="footer-logo" src="./icon/git.svg" alt="github">
           </a>
-
           <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
             <img class="footer-logo" src="./icon/ins.svg" alt="medium">
           </a>
