footer and margin

--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -184,7 +186,6 @@
   </nav>
   <!-- header -->
   <div class="blankHM"></div>
-
   <!--intro-->
   <div class="wrapper">
     <div class="element">
@@ -226,23 +227,14 @@
 
   </div>
   <!--intro-->
-
   <div class="blankHM"></div>
-
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Method &#38; Importance </p>
-            <img class="se-arrow" src="./../icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
-      </div>
+    <div class="element">
+      <p class="tArrow">Method &#38; Importance<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
-  <div class="blankHXS"></div>
 
+  <div class="blankHXS"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -258,20 +250,15 @@
           </div>
         </div>
       </div>
-
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="IconS" src="IconCategory.svg" alt="se-arrow">
-
             <h3> <strong> Structure &#38; Prioritization</strong> </h3>
             <ul>
               <li>Structure the flow to support the core functions</li>
-
               <li>Consider the overall information hierarchy and dependency </li>
-
               <li>Minimize dependence and interdependence between elements whenever possible</li>
-
             </ul>
           </div>
         </div>
@@ -315,20 +302,14 @@
     </div>
   </div>
   <div class="blankHM"></div>
-
   <!-- My Journey -->
+
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> My Journey </p>
-            <img class="se-arrow" src="./../icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
-      </div>
+    <div class="element">
+      <p class="tArrow">My Journey<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
+
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
       <div class="element">
@@ -401,24 +382,18 @@
 
   </div>
   <!-- My Journey -->
+
   <div class="blankHM"></div>
 
   <!-- About me -->
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-
-          <div class="Grid">
-            <p class="tArrow">About Me</p>
-            <img class="se-arrow" src="./../icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
-      </div>
+    <div class="element">
+      <p class="tArrow">About Me<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
+  </div>
+  <div class="blankHS"></div>
 
-    <div class="blankHS"></div>
-
+  <div class="wrapper">
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
@@ -429,32 +404,29 @@
         </div>
       </div>
     </div>
-    <div class="blankHXS"></div>
-
-
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
-        <div class="element">
+        <div class="element ">
           <h3 class=>EDUCATION </h3>
           <div class="lineHorizS"></div>
         </div>
 
-        <div class="element">
+        <div class="element ">
           <h4> <strong>UC Berkeley </strong> </h4>
           <h6 class="textItalic"> August 2015 - May 2019</h6>
-          <h4>Master of Architecture </h4>
-          <h5> Building Science &#47; Technology </h5>
+          <h5>Master of Architecture </h5>
+          <h5> Building Science / Technology </h5>
         </div>
-        <div class="element">
+        <div class="element ">
           <h4> <strong>Beijing University of Technology </strong> </h4>
           <h6 class="textItalic"> September 2009 - July 2013</h6>
-          <h4>Bachelor of Art </h4>
+          <h5>Bachelor of Art </h5>
           <h5> Art & Design / Landscape Design </h5>
         </div>
-        <div class="element">
+        <div class="element ">
           <h4> <strong>Google UX Design Professional Certificate </strong> </h4>
           <h6 class="textItalic"> August 2021 - October 2021</h6>
-          <h4>Google &#124; Coursera</h4>
+          <h5>Google &#124; Coursera</h5>
           <h5> UI &#47; UX Design </h5>
         </div>
       </div>
@@ -469,9 +441,8 @@
         <div class="element ">
           <h4> <strong> BookYourPet </strong> </h4>
           <h6 class="textItalic"> Oct. 2021 - Present</h6>
-          <h5>UI&#47;UX designer</h5>
-
           <h5>Calabasas, CA </h5>
+          <h5>UI/UX designer</h5>
         </div>
         <div class="element ">
           <h4> <strong>vickywang.me</strong> </h4>
@@ -527,9 +498,7 @@
         </div>
         <div class="element">
           <h4> <strong>2D Graphic</strong> </h4>
-          <h5> Adobe Suite (Illustrator, Photoshop, InDesign) </h5>
-          <h5> AutoCAD </h5>
-
+          <h5> Adobe Suite (Illustrator, Photoshop, InDesign) AutoCAD </h5>
         </div>
         <div class="element">
           <h4> <strong>Programming</strong> </h4>
@@ -558,50 +527,54 @@
   </div>
   <!-- About me -->
   <div class="blankHL"></div>
+
   <!-- my photo -->
   <div class="containerTQ">
     <img src="../image/me.jpg" alt="right">
     <div class="centeredTQ">
       <h3 data-aos="fade-up" class="colorAPPOINTABg">Thank You for Visiting&#33; To learn more, head over to my
         website&#33;</h3>
-      <div class="blankHXS"></div>
 
-      <h4 class="displayNonePhone  centerHorz" data-aos="fade-up">
+      <h4 class="centerHorz" data-aos="fade-up">
         &nbsp; <a class="textProject" href="/">VICKYWANG.ME</a> </h4>
     </div>
   </div>
   <!-- my photo -->
   <!--back to top-->
-  <button id="myBtn" class=" myBtn-1550" title="Go to top">
-    <img id="bottom-arrow" class="ArrowHover" src="../icon/arrow-top.svg" alt="back to top">
-    <div>TOP</div>
+  <button id="myBtn" title="Back to top">
+    <div id="dad">
+      <div id="bro">
+        <img id="bottom-arrow" class="" src="../icon/arrow-top.svg" alt="back to top">
+      </div>
+      <div id="sis">
+        <h4>TOP</h4>
+      </div>
+    </div>
   </button>
   <!--back to top-->
-
-  <footer class="Grey100Bg">
+</body>
+<!--footer-->
+<footer class="Grey100Bg">
+  <div class="">
     <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
+      <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
           <img class="footer-logo" src="../icon/mail.svg" alt="email">
         </a>
-
         <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../icon/in.svg" alt="linkedIn">
+          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
         </a>
-
         <a target="_blank" href="https://github.com/vicky-wyq">
           <img class="footer-logo" src="../icon/git.svg" alt="github">
         </a>
-
         <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../icon/ins.svg" alt="Instagram">
+          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
         </a>
       </div>
     </div>
-  </footer>
-</body>
-
+  </div>
+</footer>
+<!--footer-->
 
 </html>
