--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
   </div>
   <!-- projects other -->
 
+  <!-- message -->
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
@@ -422,6 +423,7 @@
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
+  <!-- message -->
   <div class="blankHL"></div>
   <!--back to top-->
   <button id="myBtn" title="Back to top">
@@ -434,11 +436,9 @@
       </div>
     </div>
   </button>
-
   <!--back to top-->
   <!--footer-->
   <footer class="Grey100Bg">
-
     <div class="element">
       <div class="footer">
         <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
