--- a/photography/index.html
+++ b/photography/index.html
@@ -48,7 +48,9 @@
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="scripts_ScrollTrigger.js"></script>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -131,20 +133,22 @@
   <nav class="header" id="header">
     <div class="backgroundColorNav">
       <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
+
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box font300-1080 ">ARCHITECTURE</a>
+            class="nav-link box font300-1080 ">ARCHITECTURE</a>
+        </li>
+          <li class="nav-item active greenNav marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item active marginZero"><a href="/photography"
-              class="nav-link box font300-1080">PHOTOGRAPHY</a>
-          </li>
+
           <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
       </div>
+
       <div class="hamburger">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -153,6 +157,7 @@
     </div>
   </nav>
   <!-- header -->
+
 
 
 
@@ -175,7 +180,7 @@
       </div>
       <div class="Grid Grid--full">
         <div class="Grid-cell Grey700">
-     
+
 
           <h3>Through my unique perspective and lens, I find joy in capturing the intricate narratives and inherent
             beauty of natural elements in my photography. Whether it's a sweeping landscape or a tiny detail, I strive
@@ -327,9 +332,7 @@
   <div class="blankHM"></div>
 
 
-  <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
+
   <div class="wrapper">
     <div class="Grid Grid--full">
       <div class="Grid-cell">
@@ -652,48 +655,57 @@
     </div>
   </div>
   <div class="blankHM"></div>
+
+
+  <!-- message -->
+  <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h4 data-aos="fade-up">Thanks for stopping by&#33; I'll be sharing more photos soon&#33;</h4>
-      <div class="blankHXS"></div>
-
+      <div data-aos="fade-up">
+        <h4 class="element">
+          Thanks for stopping by&#33; I'll be sharing more photos soon&#33; </h4>
+      </div>
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
+  <!-- message -->
   <div class="blankHL"></div>
-
   <!--back to top-->
-  <button id="myBtn" class=" myBtn-1550" title="Go to top">
-    <img id="bottom-arrow" class="ArrowHover" src="../icon/arrow-top.svg" alt="back to top">
-    <div id="btnFont">TOP</div>
+  <button id="myBtn" title="Back to top">
+    <div id="dad">
+      <div id="bro">
+        <img id="bottom-arrow" class="" src="../icon/arrow-top.svg" alt="back to top">
+      </div>
+      <div id="sis">
+        <h4>TOP</h4>
+      </div>
+    </div>
   </button>
   <!--back to top-->
   <!--footer-->
   <footer class="Grey100Bg">
-
-    <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
-      <div class="footer-right">
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../icon/mail.svg" alt="email">
-        </a>
-
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
-        </a>
-
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../icon/git.svg" alt="github">
-        </a>
-
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../icon/ins.svg" alt="medium">
-        </a>
+    <div class="element">
+      <div class="footer">
+        <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+        <div class="footer-right">
+          <a href="mailto:vickyw.design@gmail.com">
+            <img class="footer-logo" src="../icon/mail.svg" alt="email">
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+            <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
+          </a>
+          <a target="_blank" href="https://github.com/vicky-wyq">
+            <img class="footer-logo" src="../icon/git.svg" alt="github">
+          </a>
+          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+            <img class="footer-logo" src="../icon/ins.svg" alt="medium">
+          </a>
+        </div>
       </div>
     </div>
   </footer>
   <!--footer-->
+
 
 </body>
 
